<?xml version="1.0" encoding="utf-8"?>
<!--定义修改密码消息框-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_password"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/please_new_password"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/re_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_re_pasword"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/new_re_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:hint="@string/please_re_new_password"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />

</LinearLayout>
