<?xml version="1.0" encoding="utf-8"?>
<!--定义登录界面-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chat_background">

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_use"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:id="@+id/imageViewIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/hollow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="32dp"
        android:importantForAccessibility="no" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:background="@drawable/edittext_border"
        android:paddingStart="40dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_below="@id/imageViewIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/edittext_border"
        android:paddingStart="40dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_below="@id/editTextUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonChase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPassword"
        android:layout_marginTop="7dp"
        android:layout_marginStart="30sp"
        style="?android:attr/borderlessButtonStyle"
        android:text="@string/forget_password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_below="@id/buttonLogin"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
