<?xml version="1.0" encoding="utf-8"?>
<!--定义找回界面-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chat_background">

    <ImageView
        android:id="@+id/imageViewIconRegister"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/hollow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/textViewWelcomeChase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chase_password"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_below="@id/imageViewIconRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:background="@drawable/edittext_border"
        android:paddingStart="40dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_below="@id/textViewWelcomeChase"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/please_new_password"
        android:inputType="textPassword"
        android:background="@drawable/edittext_border"
        android:paddingStart="40dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_below="@id/editTextUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextPasswordRe"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/please_re_new_password"
        android:inputType="textPassword"
        android:background="@drawable/edittext_border"
        android:paddingStart="40dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_below="@id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/buttonUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:layout_below="@id/editTextPasswordRe"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_below="@id/buttonUpdate"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
