<?xml version="1.0" encoding="utf-8"?>
<!--定义APP封面-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chat_background">

    <ImageView
        android:id="@+id/imageViewAppIconMain"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/hollow"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/textViewAppNameMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_below="@id/imageViewAppIconMain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/textViewAppDescriptionMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_below="@id/textViewAppNameMain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonGetStartedMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_to_use"
        android:layout_below="@id/textViewAppDescriptionMain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"/>

</RelativeLayout>
